--- a/src/components/home/Hero.css
+++ b/src/components/home/Hero.css
@@ -54,7 +54,7 @@
       font-size: 42px !important;
     }
     #hero-btn{
-      border: 1px solid  white;
+      /* border: 1px solid  white; */
       margin-top: 22px !important; 
       padding: 11px 30px;
   }
