trying to fix bug errors

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,7 +4,7 @@
   height: auto;
   width: 100%;
   background-color: #021214;
-  position: relative;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -38,6 +38,8 @@
   display: inline;
   font-family: "Poppins";
   margin-right: 80px;
+  /* background-color: white; */
+
 }
 
 .nav > .nav-links > .nav-link {
@@ -109,7 +111,7 @@
     max-width: 160px;
 }
   .nav > .nav-links {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -125,7 +127,6 @@
   }  
   .nav > .nav-links > .nav-link {
     display: block;
-    /* width: 100%; */
     padding: 12px 19px;
     border: 1px solid  red;
   }
