--- a/src/components/home/Crypto.css
+++ b/src/components/home/Crypto.css
@@ -7,8 +7,10 @@
     /* background-color: #021214; */
     font-family: "Poppins";
     position: relative;
+    z-index: 10 !important;
     color: #B3B5B6;
 }
+
 .items-btn-container{
     display: none;
     
