--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,6 +6,7 @@
   background-color: #021214;
   position: fixed;
   display: flex;
+  z-index: 9999;
   align-items: center;
   justify-content: space-between;
   padding: 20px 0px;
@@ -37,7 +38,8 @@
 .nav > .nav-links {
   display: inline;
   font-family: "Poppins";
-  margin-right: 80px;
+  margin-right: 80px; 
+  /* border: 2px solid whitesmoke; */
   /* background-color: white; */
 
 }
@@ -111,7 +113,7 @@
     max-width: 160px;
 }
   .nav > .nav-links {
-    position: fixed;
+    position: fixed !important;
     display: flex;
     flex-direction: column;
     width: 100%;
