--- a/src/components/home/Crypto.css
+++ b/src/components/home/Crypto.css
@@ -1,10 +1,8 @@
 .crypto-container .item{
     transition: 2s ease;
-    /* border: 1px solid white; */
     height: auto;
     border-radius: 20px;
     background-color: #090A15;
-    /* background-color: #021214; */
     font-family: "Poppins";
     position: relative;
     z-index: 10 !important;
@@ -51,7 +49,7 @@
     text-transform: capitalize;
 }
 .item-icon{
-    border: 2px solid #272F29;
+    /* border: 2px solid #272F29; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,7 +80,6 @@
     justify-content:center;
     align-items: center;
     margin-left: 9px;
-    /* border: 1px solid white; */
 }
 .fall{
     height: 27px;
@@ -93,12 +90,7 @@
     justify-content:center;
     align-items: center;
     margin-left: 9px;
-    /* border: 1px solid white; */
 }
-.token-chart{
-    border: 1ps solid #fff !important;
-}
-
 @media screen and (max-width: 684px){
     .crypto-container h1{
         font-size: 28px;
